# TendL05-Temp

./: README.md  app.py  setup.cfg  temp_scale.py  test_cases.py
src/: app.py
src/temperature_conversor.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_cases.py
