[metadata]
name = temperature-conversor
version = 0.0.1
author = Onelky
author_email = onelky.hernandez29@gmail.com
description = A small example package
url = https://github.com/pypa/sampleproject

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src